Спринт 12. Рейтинг Фильмов. Перевод проекта на хранение данных в базе данных H2. Корректировка по замечаниям ревьювера.